--- a/package.json
+++ b/package.json
@@ -1,14 +1,6 @@
 {
-  "name": "supabase-notes-test",
-  "private": true,
-  "version": "0.1.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
   "dependencies": {
-    "next": "14.2.35",
+    "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "@supabase/supabase-js": "^2.45.4"
@@ -16,6 +8,7 @@
   "devDependencies": {
     "typescript": "^5.0.0",
     "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/node": "^20.0.0"
   }
 }
